@@ -115,6 +115,7 @@ Trunk (unreleased changes)
 
   BUG FIXES
 
+    HAMA-190: Bug in Matrix-Vector multiplication (edwardyoon)
     HAMA-183: When we construct the matrix, 
                 dimensions should be defined. (edwardyoon)
     HAMA-172: Vector.add(Vector v) throw the Index out of bounds 
